--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
             height: 100vh;
         }
 
+        /* Style du titre (caché au début) */
         h1 {
             font-size: 32px;
-            margin-bottom: 40px;
             text-transform: uppercase;
+            margin-bottom: 40px;
+            display: none; /* Caché au début */
         }
 
+        /* Conteneur du QR Code */
         .qr-container {
             width: 205px;
             height: 250px;
@@ -37,23 +40,77 @@
             padding: 15px;
             border-radius: 10px;
             box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.2);
-            margin-bottom: 40px;
+            margin-bottom: 20px;
+            animation: breathe 3s infinite ease-in-out;
+        }
+
+        /* Animation "breathing" */
+        @keyframes breathe {
+            0%, 100% {
+                transform: scale(1);
+                box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.2);
+            }
+            50% {
+                transform: scale(1.05);
+                box-shadow: 0px 0px 30px rgba(255, 255, 255, 0.3);
+            }
         }
 
         .qr-container img {
             width: 100%;
             height: auto;
+            display: none; /* Caché au début */
+        }
+
+        /* Style du texte sous le QR Code */
+        p {
+            font-size: 14px;
+            opacity: 0.8;
+            margin-top: 10px;
+            display: none; /* Caché au début */
+        }
+
+        /* Animation de chargement */
+        .loader {
+            border: 4px solid rgba(255, 255, 255, 0.2);
+            border-left-color: #ffffff;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            animation: spin 1s linear infinite;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        /* Conteneur de chargement */
+        .loading-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 250px;
         }
     </style>
 </head>
 <body>
-    <h1 id="brandName">Chargement...</h1>
+    <!-- Titre caché au début -->
+    <h1 id="brandName"></h1>
+
+    <!-- Conteneur du QR Code -->
     <div class="qr-container">
+        <div class="loading-container" id="loadingAnimation">
+            <div class="loader"></div>
+        </div>
         <img id="qrImage" src="" alt="QR Code">
     </div>
 
+    <!-- Texte sous le QR Code -->
+    <p id="qrText">Scannez ce code pour accéder à votre contenu exclusif</p>
+
     <script>
-        const userId = "8STKKTET";  // <-- MODIFIE ICI l'ID du client
+        const userId = "9ZPTPLMT";  // <-- MODIFIE ICI l'ID du client
 
         async function loadQRData() {
             try {
@@ -65,14 +122,27 @@
 
                 if (data.error) {
                     document.getElementById("brandName").innerText = data.error;
+                    document.getElementById("brandName").style.display = "block";
                     return;
                 }
 
-                // Met à jour les éléments HTML avec les données reçues
+                // Met à jour le titre et l'affiche
                 document.getElementById("brandName").innerText = data.brand;
+                document.getElementById("brandName").style.display = "block";
+
+                // Affiche l'image QR Code après chargement
                 document.getElementById("qrImage").src = data.qr_code;
+                document.getElementById("qrImage").style.display = "block";
+
+                // Supprime l'animation de chargement
+                document.getElementById("loadingAnimation").style.display = "none";
+
+                // Affiche le texte sous le QR Code
+                document.getElementById("qrText").style.display = "block";
+
             } catch (error) {
                 document.getElementById("brandName").innerText = "Erreur de chargement";
+                document.getElementById("brandName").style.display = "block";
             }
         }
 
